fix: change card z-index

--- a/src/components/product-card/product-card.scss
+++ b/src/components/product-card/product-card.scss
@@ -34,8 +34,8 @@
   }
 
   &__img {
-     max-width: 100%;
-     max-height: 100%;
+    max-width: 100%;
+    max-height: 100%;
   }
 
   &__title {
@@ -75,12 +75,13 @@
     background-color: rgb(14, 14, 14);
     border: 0.1rem solid rgb(14, 14, 14);
 
+    transition: all 0.3s;
     cursor: pointer;
   }
 
   @media screen and (hover: hover) {
     &:hover {
-      z-index: 100;
+      z-index: 9;
 
       transform: scale(1.1);
       box-shadow: 0 0 5rem rgba(0, 0, 0, 0.3);
